Added RunJar task as I'm unable to modifiy args to run task. Attempted to update mac bundeler